--- a/programa/CemIdeiasPics/CemIdeiasPics.csproj
+++ b/programa/CemIdeiasPics/CemIdeiasPics.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Utils\Classes\DesignMDI.cs" />
     <Compile Include="Utils\Classes\Misc.cs" />
     <Compile Include="Utils\Classes\Servidor.cs" />
+    <Compile Include="Utils\Classes\ViaCEP.cs" />
     <Compile Include="Utils\Controles\CIP_BarraProgresso.cs">
       <SubType>Component</SubType>
     </Compile>
