--- a/programa/CemIdeiasPics/CemIdeiasPics.csproj
+++ b/programa/CemIdeiasPics/CemIdeiasPics.csproj
@@ -92,6 +92,7 @@
     </Compile>
     <Compile Include="Utils\Classes\Conversores.cs" />
     <Compile Include="Utils\Classes\DesignMDI.cs" />
+    <Compile Include="Utils\Classes\Mensagens.cs" />
     <Compile Include="Utils\Classes\Misc.cs" />
     <Compile Include="Utils\Classes\Servidor.cs" />
     <Compile Include="Utils\Classes\ViaCEP.cs" />
