--- a/programa/CemIdeiasPics/CemIdeiasPics.csproj
+++ b/programa/CemIdeiasPics/CemIdeiasPics.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Utils\Classes\ViaCEP.cs" />
     <Compile Include="Utils\Consultas\Cliente.cs" />
     <Compile Include="Utils\Consultas\Ensaio.cs" />
+    <Compile Include="Utils\Consultas\Portifolio.cs" />
     <Compile Include="Utils\Consultas\Usuario.cs" />
     <Compile Include="Utils\Controles\CIP_BarraProgresso.cs">
       <SubType>Component</SubType>
