--- a/programa/CemIdeiasPics/CemIdeiasPics.csproj
+++ b/programa/CemIdeiasPics/CemIdeiasPics.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Utils\Consultas\Cliente.cs" />
     <Compile Include="Utils\Consultas\Ensaio.cs" />
     <Compile Include="Utils\Consultas\Portifolio.cs" />
+    <Compile Include="Utils\Consultas\TipoEnsaio.cs" />
     <Compile Include="Utils\Consultas\Usuario.cs" />
     <Compile Include="Utils\Controles\CIP_BarraProgresso.cs">
       <SubType>Component</SubType>
