--- a/programa/CemIdeiasPics.Classes/CemIdeiasPics.Classes.csproj
+++ b/programa/CemIdeiasPics.Classes/CemIdeiasPics.Classes.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,16 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Consultas\Ensaio.cs" />
     <Compile Include="Manipuladores\ManipulaArray.cs" />
+    <Compile Include="Manipuladores\ManipulaDialogos.cs" />
     <Compile Include="Manipuladores\ManipulaImagem.cs" />
     <Compile Include="Manipuladores\ManipulaTabela.cs" />
     <Compile Include="Online\ConectaPortifolio.cs" />
     <Compile Include="Online\ConectaServidor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Consultas\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
