--- a/programa/CemIdeiasPics.Classes/CemIdeiasPics.Classes.csproj
+++ b/programa/CemIdeiasPics.Classes/CemIdeiasPics.Classes.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Consultas\ConsultaTexto.cs" />
     <Compile Include="Consultas\Ensaio.cs" />
     <Compile Include="Manipuladores\ManipulaArray.cs" />
     <Compile Include="Manipuladores\ManipulaDialogos.cs" />
