Realocação e mudança de nome da classe ViaCEP
Classe ViaCEP realocada e seu nome alterado para ConectaCEP

--- a/programa/CemIdeiasPics.Classes/CemIdeiasPics.Classes.csproj
+++ b/programa/CemIdeiasPics.Classes/CemIdeiasPics.Classes.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Manipuladores\ManipulaDialogos.cs" />
     <Compile Include="Manipuladores\ManipulaImagem.cs" />
     <Compile Include="Manipuladores\ManipulaTabela.cs" />
+    <Compile Include="Online\ConectaCEP.cs" />
     <Compile Include="Online\ConectaPortifolio.cs" />
     <Compile Include="Online\ConectaServidor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
