Implementação do design do formulário de configurações

--- a/programa/CemIdeiasPics/CemIdeiasPics.csproj
+++ b/programa/CemIdeiasPics/CemIdeiasPics.csproj
@@ -182,6 +182,9 @@
     <EmbeddedResource Include="Formulários\Menus\MenuClientes.resx">
       <DependentUpon>MenuClientes.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Formulários\Menus\MenuConfigs.resx">
+      <DependentUpon>MenuConfigs.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Formulários\Menus\MenuEnsaios.resx">
       <DependentUpon>MenuEnsaios.cs</DependentUpon>
     </EmbeddedResource>
