--- a/programa/CemIdeiasPics/CemIdeiasPics.csproj
+++ b/programa/CemIdeiasPics/CemIdeiasPics.csproj
@@ -77,6 +77,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Formulários\Configs\ConfigGerenciaUsuarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formulários\Configs\ConfigGerenciaUsuarios.Designer.cs">
+      <DependentUpon>ConfigGerenciaUsuarios.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formulários\FrmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -170,6 +176,9 @@
     <Compile Include="Utils\Modelos\MdlEndereco.Designer.cs">
       <DependentUpon>MdlEndereco.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Formulários\Configs\ConfigGerenciaUsuarios.resx">
+      <DependentUpon>ConfigGerenciaUsuarios.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Formulários\FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
@@ -271,5 +280,6 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
