--- a/programa/CemIdeiasPics/CemIdeiasPics.csproj
+++ b/programa/CemIdeiasPics/CemIdeiasPics.csproj
@@ -77,6 +77,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Formulários\Configs\ConfigCadTipos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formulários\Configs\ConfigCadTipos.Designer.cs">
+      <DependentUpon>ConfigCadTipos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formulários\Configs\ConfigGerenciaUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -176,6 +182,9 @@
     <Compile Include="Utils\Modelos\MdlEndereco.Designer.cs">
       <DependentUpon>MdlEndereco.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Formulários\Configs\ConfigCadTipos.resx">
+      <DependentUpon>ConfigCadTipos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Formulários\Configs\ConfigGerenciaUsuarios.resx">
       <DependentUpon>ConfigGerenciaUsuarios.cs</DependentUpon>
     </EmbeddedResource>
